# sudoku-solver

./: .gitignore  README.md  pyproject.toml
fastapi_server/: main.py
fastapi_server/alembic/: env.py
fastapi_server/alembic/versions/: b385bb219803_create_user_table.py
fastapi_server/api/: dependencies.py
fastapi_server/api/api_v1/: api.py
fastapi_server/api/api_v1/endpoints/: login.py  sudoku.py  users.py
fastapi_server/api/api_v1/endpoits/: sudoku.py
fastapi_server/core/: config.py  security.py
fastapi_server/crud/: __init__.py  base.py  user.py
fastapi_server/db/: base.py  base_class.py  session.py
fastapi_server/models/: __init__.py  user.py
fastapi_server/schemas/: __init__.py  sudoku.py  user.py
sudoku_solver/: solver.py
tests/: conftest.py
tests/fastapi_server/: test_login_endpoints.py  test_sudoku_endpoints.py  test_users_endpoints.py
tests/fixtures_and_data/: sudoku_grids.py
tests/sudoku_solver/: test_solver.py
tests/test_data/: users.py
