[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = "Sudoku solver API"
authors = ["Marcin Cyc <cmartindev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = "^1.7.4"
uvicorn = "^0.16.0"
pydantic = {version = "^1.9.0", extras = ["email"]}
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests',]
python_files = ['test_*.py', '*_test.py']
addopts = '--cov=sudoku_solver --cov=fastapi_server --cov-report term-missing'
